# thehighseas

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md  thehighseas.code-workspace  vcpkg-configuration.json  vcpkg.json
.github/workflows/: linux.yml  macos.yml  windows.yml
android-project/: .gitignore  build.gradle  settings.gradle
android-project/thehighseas/: build.gradle
android-project/thehighseas/src/main/: AndroidManifest.xml
android-project/thehighseas/src/main/java/org/libsdl/app/: SDLActivity.java
assets/scenes/: assetlib.blend  blender_assets.cats.txt~  boat2.blend  boat2.glb  boatscene.blend  islands.blend  mainmenu.blend  mainmenu.glb  small_boat.blend
source/: boatcameracomponent.c  boatcameracomponent.h  boatcamerasystem.c  boatcamerasystem.h  boatmovementcomponent.c  boatmovementcomponent.h  boatmovementsystem.c  boatmovementsystem.h  gamestate.c  gamestate.h  main.c  mainmenu.c  mainmenu.h  sailingcomponents.c  sailingcomponents.h
source/win32/: thehighseas.exe.manifest  thehighseas.rc
steam/: linux.vdf  macos.vdf  windows.vdf
